Update dependencies and shaders

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,9 @@
-workspace = { members = ["egui_glow"] }
 [package]
-name = "custom_3d_glow"
+name = "gl"
 version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
-license = "MIT OR Apache-2.0"
 edition = "2021"
-rust-version = "1.72"
-publish = false
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 eframe = { version = "0.25.0" }
